--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Rental Website</title>
     <!-- Link To CSS -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- Box Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
@@ -256,7 +256,7 @@
 
 
     <!-- Link To JS -->
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 
 </body>
 
